texte fuer frauen

--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
                                 </div>
                                 <div class="slide-caption fadeout-element">
                                   <div class="slide-title">
-                                    <span>Lisa Thett</span>
+                                    <span>Isabella Noir</span>
                                   </div>
                                   <div class="slide-cat">
-                                    <span>Verschlossen & Wild</span>
+                                    <span>Would you dare to be the one who undresses my secrets?</span>
                                   </div>
                                 </div>
                               </div>
@@ -278,10 +278,10 @@
                               </div>
                               <div class="slide-caption fadeout-element">
                                 <div class="slide-title">
-                                  <span>Dia Morscho</span>
+                                  <span>Scarlett Veyra</span>
                                 </div>
                                 <div class="slide-cat">
-                                  <span>Füße & Viel Mehr</span>
+                                  <span>Do you enjoy the burn of velvet fire?</span>
                                 </div>
                               </div>
                             </div>
@@ -363,10 +363,10 @@
                                     </div>
                                     <div class="slide-caption fadeout-element">
                                       <div class="slide-title">
-                                        <span>Olivia Bussel</span>
+                                        <span>Vivienne Rose</span>
                                       </div>
                                       <div class="slide-cat">
-                                        <span>Für Alles Offen & Lebenslustig>
+                                        <span>FCareful, darling… some roses cut deeper than others.</span>
                                       </div>
                                     </div>
                                   </div>
@@ -559,14 +559,14 @@
                     </li>
                     <li class="filters-timeline link">
                       <a href="#" data-filter=".design-filter" class=""
-                        >Design</a
+                        >Underwear</a
                       >
                     </li>
                     <li class="filters-timeline link">
-                      <a href="#" data-filter=".video-filter" class="">Video</a>
+                      <a href="#" data-filter=".video-filter" class="">Socks</a>
                     </li>
                     <li class="filters-timeline link">
-                      <a href="#" data-filter=".photo-filter" class="">Photo</a>
+                      <a href="#" data-filter=".photo-filter" class="">More</a>
                     </li>
                   </ul>
                   <div id="close-filters"></div>
