--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 		ga('send', 'pageview');
 	</script>
     
-    <title>Serano - Creative Portfolio Template</title>
+    <title>Contact Parlorea</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Download the best Creative Portfolio HTML Template in 2023" />
     <meta name="author" content="ClaPat Studio">
@@ -128,7 +128,7 @@
                         <div id="hero-styles">
                             <div id="hero-caption" class="content-full-width parallax-scroll-caption text-align-center">
                                 <div class="inner">                                    
-                                    <h1 class="hero-title caption-timeline"><span>Hello</span><span>Stranger</span></h1>
+                                    <h1 class="hero-title caption-timeline"><span>Hello</span><span>Gentlemen</span></h1>
                                     <div class="hero-subtitle caption-timeline"><span>Contact Us</span></div>
                                     <div class="hero-arrow link caption-timeline"><span><i class="arrow-icon"></span></i></div>                                    
                                 </div>
@@ -185,7 +185,7 @@
                                             <input name="email" type="text" id="email" size="30" value="" placeholder="Your Email"><label class="input_label"></label>
                                         </div>                            
                                         <div class="message-box has-animation" data-delay="100">
-                                            <textarea name="comments" cols="40" rows="4" id="comments" placeholder="Tell Us About Your Project" ></textarea><label class="input_label slow"></label>
+                                            <textarea name="comments" cols="40" rows="4" id="comments" placeholder="Tell Us About Your Desire" ></textarea><label class="input_label slow"></label>
                                         </div>
 										
                                         <div class="verify-box has-animation" data-delay="100">                                        
