from here to buy here

--- a/project04.html
+++ b/project04.html
@@ -193,7 +193,7 @@
                                             <div class="clapat-button parallax-element">
                                                 <div class="button-border outline rounded parallax-element-second">
                                                     <a target="_blank" rel="nofollow" href="https://www.keepgrading.com/work/prada-linea-rossa-ss-22-campaign/">
-                                                        <span data-hover="View More">View More</span>
+                                                        <span data-hover="View More">Buy here</span>
                                                      </a>
                                                  </div>
                                             </div>
