--- a/project05.html
+++ b/project05.html
@@ -184,7 +184,7 @@
                                             <div class="clapat-button parallax-element">
                                                 <div class="button-border outline rounded parallax-element-second">
                                                     <a target="_blank" rel="nofollow" href="https://www.behance.net/gallery/56836591/Urban-art-encyclopedia">
-                                                        <span data-hover="View More">View More</span>
+                                                        <span data-hover="View More">Buy here</span>
                                                      </a>
                                                  </div>
                                             </div>
