--- a/project06.html
+++ b/project06.html
@@ -187,7 +187,7 @@
                                             <div class="clapat-button parallax-element">
                                                 <div class="button-border outline rounded parallax-element-second">
                                                     <a target="_blank" rel="nofollow" href="https://www.nendo.jp/en/works/colourful-shadows-2/cs-collection-3/cs006/?erelease">
-                                                        <span data-hover="View More">View More</span>
+                                                        <span data-hover="View More">Buy here</span>
                                                      </a>
                                                  </div>
                                             </div>
