--- a/project01.html
+++ b/project01.html
@@ -190,7 +190,7 @@
                                             <div class="clapat-button parallax-element">
                                                 <div class="button-border outline rounded parallax-element-second">
                                                     <a target="_blank" rel="nofollow" href="https://www.behance.net/gallery/85708347/ZOWOO-Sun-Mao-Woodcraft-Speaker">
-                                                        <span data-hover="View More">View More</span>
+                                                        <span data-hover="View More">Buy here</span>
                                                      </a>
                                                  </div>
                                             </div>
