--- a/project02.html
+++ b/project02.html
@@ -186,7 +186,7 @@
                                             <div class="clapat-button parallax-element">
                                                 <div class="button-border outline rounded parallax-element-second">
                                                     <a target="_blank" rel="nofollow" href="https://www.behance.net/gallery/82681037/Google-Chromecast-3">
-                                                        <span data-hover="View More">View More</span>
+                                                        <span data-hover="View More">Buy here</span>
                                                      </a>
                                                  </div>
                                             </div>
